<resources>
    <string name="app_name">Corona_ProtoType</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="forgot">Forgot id or password?</string>
    <string name="sign_up">회원가입</string>
    <string name="copyright">Made by Check Team</string>
    <string name="signup_member">회원가입</string>
    <string name="signup_id">아이디</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>