<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.check.corona_prototype.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#ffffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/backgroung_img"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:layout_weight="7"
        android:weightSum="10"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="Sign in"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_weight="5"
            android:textStyle="bold"
             />


        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="#80FFFFFF"
            android:hint="@string/id"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_margin="5dp"
            android:background="#80FFFFFF"
            android:hint="@string/pw"

            android:padding="5dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"

            android:background="@drawable/btn_shape_round"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in"
            android:textColor="#99050505"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:text="@string/forgot"
            android:textColor="#CCFDFDFD"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="#B3000000"
            android:textSize="15sp"
            android:layout_weight="1"
            android:background="#00FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>




</LinearLayout>